Button on mobile fix

--- a/css/_video-preview.css
+++ b/css/_video-preview.css
@@ -1,7 +1,7 @@
 .video-preview {
     background: none;
-    max-height: 290px;
-    overflow: auto;
+    /*max-height: 290px;
+    overflow: auto;*/
 
     &-entry {
         cursor: pointer;
